<resources>
    <string name="app_name" translatable="false">Sentry Turret Control Center</string>
    <string name="am_btOff">Off</string>
    <string name="am_btAuto" translatable="false">Auto</string>
    <string name="am_btManual">Manual</string>
    <string name="am_btSettings">Settings</string>
    <string name="am_btDisconnect">Disconnect</string>
    <string name="ao_lbRotorSpeed">Rotation Speed</string>
    <string name="ao_btBack">Return</string>
    <string name="ao_lbPrecision">Precision</string>
    <string name="ao_tvSeconds">Seconds</string>
    <string name="ao_lbReturnTime">Return Time</string>
    <string name="ao_swPatrolMode">Patrol Mode</string>
    <string name="ac_btConnect">Connect</string>
    <string name="StatusDisconnected">Disconnected</string>
    <string name="StatusConnected">Connected</string>
    <string name="notification_success">Success</string>
    <string name="notification_successSent">Sent Successfully</string>
    <string name="notification_fail">Failed</string>
    <string name="notification_failSent">Sent Failed</string>
    <string name="ao_btSend">Send</string>
    <string name="ac_btGoToSettings">Wi-Fi Settings</string>
    <string name="ac_btContinue">Continue</string>
    <string name="StatusWiFiDisabled">Wi-Fi is Off</string>
    <string name="StatusConnectedToTurret">Connected with The Turret</string>
    <string name="StatusDisconnectedFromTurret">Not Connected with The Turret</string>
    <string name="StatusConnectedWithTurret">Connection status:</string>
    <string name="al_btFire">FIRE</string>
    <string name="vs_Success">Value sent successfully</string>
    <string name="vs_failed">Failed to send value</string>
    <string name="vs_error">Error:</string>
</resources>