<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/am_btOff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <Button
        android:id="@+id/btManual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/am_btManual"
        app:layout_constraintBottom_toBottomOf="@+id/btOff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btOff"
        app:layout_constraintTop_toTopOf="@+id/btOff"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/am_btAuto"
        app:layout_constraintBottom_toBottomOf="@+id/btOff"
        app:layout_constraintEnd_toStartOf="@+id/btOff"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btOff"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/am_btSettings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btOff"
        app:layout_constraintVertical_bias="0.05"
        android:onClick="goToSettings"/>

    <Button
        android:id="@+id/btDisconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/am_btDisconnect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSettings"
        app:layout_constraintVertical_bias="0.886"
        android:onClick="disconnectFromDevice"/>

    <TextView
        android:id="@+id/am_textStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StatusDisconnected"
        app:layout_constraintBottom_toTopOf="@+id/btOff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>